added images, index.html and style.css files

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tribute Page</title>
+    <title>Tribute Page - La Rama</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+   <div id="main">
+       <h1 id="title">Pilgrimage in Gran Canaria - La Rama de Agaete</h1>
+       <div>Aboriginal tradition</div>
+       <div id="img-div">
+           <img  id="image" src="images\picture3.jpg" alt="pilgrim trail">
+       </div>
+   </div>
 </body>
 </html>
 
