--- a/index.html
+++ b/index.html
@@ -1,20 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tribute Page - La Rama</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-   <div id="main">
-       <h1 id="title">Pilgrimage in Gran Canaria - La Rama de Agaete</h1>
-       <div>Aboriginal tradition</div>
-       <div id="img-div">
-           <img  id="image" src="images\picture3.jpg" alt="pilgrim trail">
-       </div>
-   </div>
-</body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div id="main">
+      <header>
+        <h1 id="title">Pilgrimage in Gran Canaria - La Rama de Agaete</h1>
+        <div>Aboriginal tradition</div>
+        <div id="img-div">
+          <img id="image" src="images\picture1.jpg" alt="pilgrim trail" />
+        </div>
+        <div id="img-caption">
+          Altos de Agaete - Road to Tamadaba
+        </div>
+      </header>
+      <main>
+        <div id="tribute-info">
+          <ul>
+            <h2 id="headline">Things you need to know</h2>
+            <li>
+              It is a tradition that dates back to the ancient Canarian
+              aborigines.
+            </li>
+            <li>
+              After the conquest of the Canary Islands some traditions were
+              Castilianized.
+            </li>
+            <li>Pilgrims make floral offerings in honor of Saint Peter.</li>
+            <li>
+              The night before St. Peter's Day, the pilgrims go up to Tamadaba
+              to select, collect and manufacture the bouquet.
+            </li>
+            <li>
+              People spend the night partying in Tamadaba and in the morning
+              return to the valley of Agaete where is the hermit of Saint Peter.
+            </li>
+            <li>The dance is performed in honor of Saint Peter</li>
+            <li>
+              The bouquets are delivered to the church, where they pray and ask
+              for favors from the saint.
+            </li>
+          </ul>
+        </div>
+      </main>
+      <footer>
+        <h3>
+          If you have time, you should 
+          <a id="tribute-link" href="https://www.youtube.com/watch?v=9rQ0UvmzeiM" target="_blank">watch this video </a>.
+        </h3>
+      </footer>
+    </div>
+  </body>
 </html>
-
