CSS and html checked

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id="title">Pilgrimage in Gran Canaria - La Rama de Agaete</h1>
         <div>Aboriginal tradition</div>
         <div id="img-div">
-          <img id="image" src="images\picture1.jpg" alt="pilgrim trail" />
+          <img id="image" src="images/picture1.jpg" alt="pilgrim trail"/>
         </div>
         <div id="img-caption">
           Altos de Agaete - Road to Tamadaba
@@ -21,8 +21,8 @@
       </header>
       <main>
         <div id="tribute-info">
-          <ul>
             <h2 id="headline">Things you need to know</h2>
+          <ul>
             <li>
               It is a tradition that dates back to the ancient Canarian
               aborigines.
